tests/negative/symbols/unused.orng
// unused.orng:6:10: error: symbol `x` is never used
//     let x = 132
//         ^
// 
fn main() -> Int {
    let x = 132
    1
}